// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoliciesApi deletePolicy() 1: Delete existing policy [FrodoTestPolicy4] 1`] = `
{
  "_id": "FrodoTestPolicy4",
  "_rev": "0",
}
`;

exports[`PoliciesApi deletePolicy() 2: Delete non-existing policy [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Policy DoesNotExist does not exist.",
  "reason": "Not Found",
}
`;

exports[`PoliciesApi getPolicies() 1: Get all policies 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "_id": "FrodoTestPolicy1",
      "_rev": "1684553107521",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.521Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.521Z",
      "name": "FrodoTestPolicy1",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy2",
      "_rev": "1684553107646",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.646Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.646Z",
      "name": "FrodoTestPolicy2",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy4",
      "_rev": "1684553107826",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.826Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.826Z",
      "name": "FrodoTestPolicy4",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
  ],
  "resultCount": 3,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPoliciesByPolicySet() 1: Get policies in existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "_id": "FrodoTestPolicy1",
      "_rev": "1684553107521",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.521Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.521Z",
      "name": "FrodoTestPolicy1",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy2",
      "_rev": "1684553107646",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.646Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.646Z",
      "name": "FrodoTestPolicy2",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
    {
      "_id": "FrodoTestPolicy4",
      "_rev": "1684553107826",
      "actionValues": {
        "GET": true,
      },
      "active": true,
      "applicationName": "FrodoTestPolicySet1",
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": "2023-05-20T03:25:07.826Z",
      "description": "Frodo Test Policy",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": "2023-05-20T03:25:07.826Z",
      "name": "FrodoTestPolicy4",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "*://*:*/forgerock/app2/*",
        "*://*:*/app2/*",
      ],
      "subject": {
        "type": "AuthenticatedUsers",
      },
    },
  ],
  "resultCount": 3,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPoliciesByPolicySet() 2: Get policies in non-existing policy set [DoesNotExist] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [],
  "resultCount": 0,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PoliciesApi getPolicy() 1: Get existing policy [FrodoTestPolicy1] 1`] = `
{
  "_id": "FrodoTestPolicy1",
  "_rev": "1684553107521",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": "2023-05-20T03:25:07.521Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": "2023-05-20T03:25:07.521Z",
  "name": "FrodoTestPolicy1",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;

exports[`PoliciesApi getPolicy() 2: Get non-existing policy [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Policy DoesNotExist does not exist.",
  "reason": "Not Found",
}
`;

exports[`PoliciesApi putPolicy() 1: Update existing policy [FrodoTestPolicy2] 1`] = `
{
  "_id": "FrodoTestPolicy2",
  "_rev": "1684553108253",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": "2023-05-20T03:25:07.646Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": "2023-05-20T03:25:08.253Z",
  "name": "FrodoTestPolicy2",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;

exports[`PoliciesApi putPolicy() 2: Create non-existing policy [FrodoTestPolicy3] 1`] = `
{
  "_id": "FrodoTestPolicy3",
  "_rev": "1684553108345",
  "actionValues": {
    "GET": true,
  },
  "active": true,
  "applicationName": "FrodoTestPolicySet1",
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": "2023-05-20T03:25:08.345Z",
  "description": "Frodo Test Policy",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": "2023-05-20T03:25:08.345Z",
  "name": "FrodoTestPolicy3",
  "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  "resources": [
    "*://*:*/forgerock/app2/*",
    "*://*:*/app2/*",
  ],
  "subject": {
    "type": "AuthenticatedUsers",
  },
}
`;
